Fix tag wrapping

--- a/less/apps.less
+++ b/less/apps.less
@@ -247,13 +247,11 @@
 
     .tag {
       height: min-content;
+      white-space: nowrap;
     }
 
     &.race-info {
       display: block;
-      .tag {
-        white-space: nowrap;
-      }
     }
   }
 
