--- a/less/chat.less
+++ b/less/chat.less
@@ -323,6 +323,7 @@
       border-radius: 3px;
       background: rgba(0, 0, 0, 0.05);
       flex: 0 1 auto;
+      white-space: initial;
     }
 
     input[type="text"] {
